vlib/v/checker/tests/array_init_option_err.out
vlib/v/checker/tests/array_init_option_err.vv:2:38: error: cannot use unwrapped Option as initializer
    1 | fn main() {
    2 |     mut arr1 := []int{len: get(), init: get()}
      |                                         ~~~~~
    3 |     dump(arr1)
    4 |
vlib/v/checker/tests/array_init_option_err.vv:2:25: error: cannot use unwrapped Option as length
    1 | fn main() {
    2 |     mut arr1 := []int{len: get(), init: get()}
      |                            ~~~~~
    3 |     dump(arr1)
    4 |
vlib/v/checker/tests/array_init_option_err.vv:5:20: error: cannot use unwrapped Option as length
    3 |     dump(arr1)
    4 | 
    5 |     arr1 = []int{len: get(), init: get()?}
      |                       ~~~~~
    6 |     dump(arr1)
    7 |
vlib/v/checker/tests/array_init_option_err.vv:8:34: error: cannot use unwrapped Option as initializer
    6 |     dump(arr1)
    7 | 
    8 |     arr1 = []int{len: get()?, init: get()}
      |                                     ~~~~~
    9 |     dump(arr1)
   10 |
vlib/v/checker/tests/array_init_option_err.vv:11:20: error: cannot use unwrapped Option as capacity
    9 |     dump(arr1)
   10 | 
   11 |     arr1 = []int{cap: get(), len: get()?, init: get()?}
      |                       ~~~~~
   12 |     dump(arr1)
   13 | }
