vlib/v/checker/tests/array_init_option_err.vv
fn main() {
	mut arr1 := []int{len: get(), init: get()}
	dump(arr1)

	arr1 = []int{len: get(), init: get()?}
	dump(arr1)

	arr1 = []int{len: get()?, init: get()}
	dump(arr1)

	arr1 = []int{cap: get(), len: get()?, init: get()?}
	dump(arr1)
}

fn get() ?int {
	return 5
}
